tests/str_param_byvalue_bad.hop
// Verifies string parameter byvalue is rejected.
fn bad(s str) {}
